# forge

./: .gitignore  .goreleaser.yaml  .sv.toml  AGENTS.md  Cargo.toml  EPICS_AND_TASKS.md  Makefile  PRODUCT_SPECIFICATION.md  PROMPT.md  README.md  USER_FEEDBACK.md  UX_FEEDBACK_1.md  UX_FEEDBACK_2.md  UX_FEEDBACK_3.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  internal  proto  ralph.sh
crates/fmail-core/: Cargo.toml
crates/fmail-core/src/: names.rs  project.rs
crates/fmail-core/tests/: project_gc_test.rs  store_io_test.rs
crates/forge-agent/: Cargo.toml
crates/forge-agent/src/: capability.rs  error.rs  event.rs  forged.rs  lib.rs  lifecycle.rs  mock.rs  service.rs  types.rs  wait.rs
crates/forge-agent/tests/: event_test.rs  mock_service_test.rs  wait_test.rs
crates/forge-daemon/: Cargo.toml
crates/forge-daemon/src/: agent.rs  bootstrap.rs  events.rs  lib.rs  node_registry.rs  server.rs  status.rs
crates/forge-daemon/tests/: grpc_interop_test.rs  rforged_binary_test.rs
crates/forge-db/: Cargo.toml  build.rs
crates/forge-db/src/: event_repository.rs  file_lock_repository.rs  lib.rs  loop_queue_repository.rs  loop_run_repository.rs  loop_work_state_repository.rs  mail_repository.rs  persistent_agent_event_repository.rs  persistent_agent_repository.rs  profile_repository.rs  team_delegation.rs  team_repository.rs  team_task_repository.rs
crates/forge-db/tests/: approval_repository_test.rs  event_repository_test.rs  go_db_compat_read_test.rs  go_db_compat_seed_test.rs  loop_repository_test.rs  loop_run_repository_test.rs  mail_repository_test.rs  migration_002_test.rs  migration_006_test.rs  migration_007_test.rs  migration_008_test.rs  migration_009_test.rs  migration_011_test.rs  migration_012_test.rs  migration_013_test.rs  migration_014_test.rs  migration_015_test.rs  persistent_agent_event_repository_test.rs  persistent_agent_repository_test.rs  profile_repository_test.rs  team_repository_test.rs  team_task_repository_test.rs  usage_repository_test.rs
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: actions.rs  activity_heatmap.rs  activity_stream.rs  adaptive_hints.rs  agent_performance_profiler.rs  agent_presence_radar.rs  agent_thought_stream.rs  alert_rail.rs  alert_rule_dsl.rs  analytics_dashboard.rs  analytics_fact_model.rs  app.rs  blame_timeline.rs  blocker_graph.rs  budget_guardrails.rs  bulk_action_planner.rs  claim_conflict_predictor.rs  command_palette.rs  communication_quality.rs  cost_resource_tracker.rs  crash_safe_state.rs  cross_loop_impact_analysis.rs  daily_summary.rs  dashboard_snapshot_share.rs  degradation_policy.rs  emergency_safe_stop.rs  error_correlation.rs  event_hook_automation.rs  extension_actions.rs  extension_api.rs  extension_event_bus.rs  extension_package_manager.rs  extension_reference.rs  extension_sandbox.rs  failure_focus.rs  filter.rs  fleet_selection.rs  fleet_topology_graph.rs  frankentui_bootstrap.rs  global_search_index.rs  (+72 more)
crates/forge-tui/src/picture_in_picture/: tests.rs
crates/forge-tui/tests/: error_correlation_test.rs  interactive_smoke_test.rs  layout_snapshot_test.rs  log_anchors_marker_test.rs  runtime_source_guard_test.rs  stacktrace_focus_test.rs  throughput_gauge_test.rs
rust/: Cargo.toml  clippy.toml  coverage-thresholds.txt  coverage-waivers.txt  rust-toolchain.toml
rust/crates/fmail-cli/: Cargo.toml
rust/crates/fmail-cli/src/: completion.rs  lib.rs  log.rs  messages.rs  register.rs  send.rs  tests_common.rs  topics.rs  watch.rs  who.rs
rust/crates/fmail-cli/tests/: completion_command_test.rs  init_gc_command_test.rs  register_command_test.rs  rfmail_wrapper_smoke_test.rs  send_command_test.rs  status_command_test.rs  topics_log_messages_test.rs  watch_command_test.rs  who_command_test.rs
rust/crates/fmail-core/: Cargo.toml
rust/crates/fmail-core/src/: agent_registry.rs  constants.rs  format.rs  lib.rs  message.rs  root.rs  store.rs  validate.rs
rust/crates/fmail-core/tests/: store_permissions_test.rs  store_register_test.rs  store_status_test.rs
rust/crates/fmail-tui/: Cargo.toml
rust/crates/fmail-tui/src/: agents.rs  app.rs  bookmarks.rs  dashboard.rs  graph.rs  heatmap.rs  lib.rs  live_tail.rs  notifications.rs  operator.rs  replay.rs  threading.rs
rust/crates/forge-cli/: .gitignore  Cargo.toml
rust/crates/forge-cli/src/: audit.rs  clean.rs  completion.rs  config.rs  context.rs  daemon_client.rs  doctor.rs  error_envelope.rs  explain.rs  export.rs  inject.rs  kill.rs  lib.rs  lock.rs  logs.rs  loop_internal.rs  mail.rs  mem.rs  migrate.rs  msg.rs  pool.rs  profile.rs  prompt.rs  ps.rs  queue.rs  resume.rs  rm.rs  run.rs  run_exec.rs  scale.rs  send.rs  seq.rs  skills.rs  spawn_loop.rs  status.rs  stop.rs  template.rs  tui.rs  up.rs  wait.rs  (+2 more)
rust/crates/forge-cli/testdata/: audit_oracle.json  run_oracle.json
rust/crates/forge-cli/tests/: audit_command_test.rs  clean_command_test.rs  clean_sqlite_backend_test.rs  completion_command_test.rs  inject_command_test.rs  kill_command_test.rs  lock_command_test.rs  logs_sqlite_backend_test.rs  loop_internal_command_test.rs  mem_command_test.rs  migrate_go_oracle_fixture_test.rs  msg_command_test.rs  msg_go_oracle_fixture_test.rs  pool_command_test.rs  profile_command_test.rs  profile_sqlite_backend_test.rs  prompt_command_test.rs  queue_sqlite_backend_test.rs  resume_command_test.rs  rm_command_test.rs  root_command_test.rs  run_command_test.rs  run_sqlite_backend_test.rs  send_command_test.rs  seq_command_test.rs  stop_command_test.rs  template_command_test.rs  wait_command_test.rs  workflow_filesystem_backend_test.rs
rust/crates/forge-core/: Cargo.toml
rust/crates/forge-core/src/: config.rs  error.rs  lib.rs  validation.rs
rust/crates/forge-daemon/: Cargo.toml
rust/crates/forge-daemon/src/: agent.rs  bootstrap.rs  events.rs  (+5 more)
rust/crates/forge-db/: Cargo.toml  build.rs
rust/crates/forge-ftui-adapter/: Cargo.toml
rust/crates/forge-loop/: Cargo.toml
rust/crates/forge-parity-stub/: Cargo.toml
rust/crates/forge-rpc/: Cargo.toml  build.rs
rust/crates/forge-runner/: Cargo.toml
rust/crates/forge-tui/: Cargo.toml
(+1806 files in other folders)
