[workspace]
members = [
    "crates/fmail-cli",
    "crates/fmail-core",
    "crates/fmail-tui",
    "crates/forge-agent",
    "crates/forge-cli",
    "crates/forge-core",
    "crates/forge-db",
    "crates/forge-daemon",
    "crates/forge-ftui-adapter",
    "crates/forge-loop",
    "crates/forge-rpc",
    "crates/forge-runner",
    "crates/forge-tui",
    "crates/forge-parity-stub",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
chrono = "0.4"
serde = "1"
serde_json = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
expect_used = "deny"
todo = "deny"
unwrap_used = "deny"
