[package]
name = "fmail-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fmail-core"
path = "src/bin/fmail-core.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
