[package]
name = "forge-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { workspace = true }
forge-rpc = { path = "../forge-rpc" }
prost-types = "0.13"
thiserror = "2"
tokio = { version = "1", features = ["time", "sync"] }
tonic = { version = "0.12", features = ["transport"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
