[package]
name = "forge-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-daemon"
path = "src/bin/forge-daemon.rs"

[[bin]]
name = "rforged"
path = "src/bin/rforged.rs"

[dependencies]
chrono = "0.4"
forge-core = { path = "../forge-core" }
forge-rpc = { path = "../forge-rpc" }
nix = { version = "0.29", features = ["signal", "resource", "process", "hostname"] }
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tonic = "0.12"

[lints]
workspace = true
