[package]
name = "forge-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-db"
path = "src/bin/forge-db.rs"

[dependencies]
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true

[build-dependencies]
walkdir = "2"
