[package]
name = "forge-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-tui"
path = "src/bin/forge-tui.rs"

[dependencies]
forge-ftui-adapter = { path = "../forge-ftui-adapter" }
forge-db = { path = "../forge-db" }
regex = "1"
serde_json = { workspace = true }

[lints]
workspace = true
