[package]
name = "forge-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-tui"
path = "src/bin/forge-tui.rs"

[features]
default = ["frankentui-bootstrap"]
frankentui-bootstrap = ["forge-ftui-adapter/frankentui-upstream"]

[dependencies]
forge-cli = { path = "../forge-cli" }
forge-ftui-adapter = { path = "../forge-ftui-adapter" }
forge-db = { path = "../forge-db" }
crossterm = "0.28"
regex = "1"
serde_json = { workspace = true }

[lints]
workspace = true
