[package]
name = "fmail-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fmail-cli"
path = "src/bin/fmail-cli.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fmail-core = { path = "../fmail-core" }
rand = "0.8"
serde_json = "1"
tabwriter = "1"

[lints]
workspace = true
