[package]
name = "fmail-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fmail-tui"
path = "src/bin/fmail-tui.rs"

[dependencies]
fmail-core = { path = "../fmail-core" }
forge-ftui-adapter = { path = "../forge-ftui-adapter" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
