[package]
name = "forge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-cli"
path = "src/bin/forge-cli.rs"

[dependencies]
forge-db = { path = "../forge-db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabwriter = "1"

[lints]
workspace = true
