[package]
name = "forge-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-cli"
path = "src/bin/forge-cli.rs"

[[bin]]
name = "rforge"
path = "src/bin/rforge.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
fmail-core = { path = "../fmail-core" }
forge-db = { path = "../forge-db" }
forge-loop = { path = "../forge-loop" }
forge-rpc = { path = "../forge-rpc" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tabwriter = "1"
tokio = { version = "1", features = ["rt", "time"] }
toml = "0.8"
tonic = "0.12"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
