[package]
name = "forge-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-daemon"
path = "src/bin/forge-daemon.rs"

[dependencies]
chrono = "0.4"
forge-rpc = { path = "../forge-rpc" }
nix = { version = "0.29", features = ["signal", "resource", "process"] }
prost-types = "0.13"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tonic = { version = "0.12", features = ["transport"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = "0.12"

[lints]
workspace = true
