[package]
name = "forge-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-db"
path = "src/bin/forge-db.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"

[lints]
workspace = true

[build-dependencies]
walkdir = "2"
