[package]
name = "forge-loop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-loop"
path = "src/bin/forge-loop.rs"

[dependencies]
chrono = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
wait-timeout = "0.2"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
