[package]
name = "forge-rpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[lints]
workspace = true

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
