[package]
name = "forge-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-runner"
path = "src/bin/forge-runner.rs"

[[bin]]
name = "forge-agent-runner"
path = "src/bin/forge-agent-runner.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
forge-db = { path = "../forge-db" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
